Common/src/main/java/org/example/error/FileModeException.java
package org.example.error;

public class FileModeException extends RuntimeException{
}
